--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine On
 
+RewriteBase /skillsparq/public
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?url=$1 "[L,QSA,B= ?,BNP]"
