--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "MyApp\\": "src"
+            "MyApp\\": "\\app\\controllers"
         }
     },
     "require": {
